--- a/5.25_zy/第一题.csproj
+++ b/5.25_zy/第一题.csproj
@@ -43,8 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bird.cs" />
+    <Compile Include="Flight.cs" />
+    <Compile Include="Ostrich.cs" />
+    <Compile Include="Parrot.cs" />
+    <Compile Include="Penguin.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sparrow.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
