--- a/5.25_zy/第一题.csproj
+++ b/5.25_zy/第一题.csproj
@@ -47,7 +47,7 @@
     <Compile Include="Flight.cs" />
     <Compile Include="Ostrich.cs" />
     <Compile Include="Parrot.cs" />
-    <Compile Include="Penguin.cs" />
+    <Compile Include="Properties\Penguin.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sparrow.cs" />
